v1.5.4d changes:
- Removed toggle whore bed button that's applied to all beds as it causes errors.
- Added ArchitectSense's DLL by fluffy.
- Added new 'Whore Beds' category in furniture tab by Sidfu.
- Added research tree for whore beds by Sidfu.
- Added new mod preview by NEPH.
- Added new private parts textures by NEPH.
- Added Korean translation by NEPH.
- Fixed xpath bug.

v1.5.4b changes:
- Added Wild Mode.
- Mod directory optimization.
- Some value optimization.
- Minor bugfixes.
- Temporary fix for ingame notification bug.
- Fixed reappearing double pregnancy bug.

v1.5.3 changes:
- Fixed a critical bug that pregnancy coefficients didn't work
- Tweaked many values
- Added a compatibility patch for the mod Misc.MAI so that MAI will spawn with private hediffs without reloading the save. The patch is in the file BodyPatches.xml.
Note:If you have Misc.MAI, please load it before RJW. If you don't have it, a red line warning will pop like this:
[Rimjobworld] Patch operation Verse.PatchOperationAdd(*/ThingDef[thingClass = "AIPawn.AIPawn"]/race) failed
Just ignore it.
- You may add your own private hediffs' patch to your modded race. The MAI patch is an example. 
- Added some in-game notifications when you try to manually make your pawns rape CP.
- Added some in-game messages about anal sex
- Fixed bugs regarding whore system and zoophiliac behaviors.

v1.5.2 changes:
- Fixed things/pawns being killed vanishes
- Fixed some animals spawned not having genitals/anus/breasts hediffs if you don't reload the save
- Code optimization
- some minor bugfix


v1.5.1 changes:
- fixed the performance issue, 
- allow you to install penis to women to make futas(so that you should no longer complain why women can't rape), 
- allow you to toggle whether non-futa women can rape(but still need traits like rapists or nymphos), 
-other bugfixs

v1.4 to v1.5:
  - Tons of bugfix(ex. losing apparel when raping, normal loving has the "stole some lovin" buff, etc.)