@@ -1,60 +1,64 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
-  <!-- Settings-->
-  <WildMode_name>Wild mode</WildMode_name>
-  <WildMode_desc>EXPERIMENTAL. No rules for sex. All limiting requirements are turned off. Enjoy the wildest side of Rimworld.</WildMode_desc>
+	<!-- Settings-->
+	<WildMode_name>Wild mode</WildMode_name>
+	<WildMode_desc>EXPERIMENTAL. No rules for sex. All limiting requirements are turned off. Enjoy the wildest side of Rimworld.</WildMode_desc>
 	<sexneed_decay_rate_name>Sex need decay multiplier (%)</sexneed_decay_rate_name>
-	<sexneed_decay_rate_desc>0% for no decay, and 10000% for Rapeturnus Planet.</sexneed_decay_rate_desc>
+	<sexneed_decay_rate_desc>0% for no decay.<br/>10000% for Rapeturnus Planet.
+	</sexneed_decay_rate_desc>
 	<NymphsJoin>Nymphomaniacs</NymphsJoin>
-  <NymphsJoin_desc>Spawns pawns with nymphomaniac trait to join the colony.</NymphsJoin_desc>
-  <STD_FromFloors>STDs from environment</STD_FromFloors>
-  <STD_FromFloors_desc>Pawns will catch STDs from dirty environment.</STD_FromFloors_desc>
-  <PrisonersBeating>Comfort prisoners beating</PrisonersBeating>
-  <PrisonersBeating_desc>Pawns will beat the hell out of the comfort prisoners while raping them.</PrisonersBeating_desc>
-  <OffspringLookLikeTheirMother>Genetic inheritance (%)</OffspringLookLikeTheirMother>
-  <OffspringLookLikeTheirMother_desc>100% means born babies will look exactly like their mothers. Set it to 0% for random appearance.</OffspringLookLikeTheirMother_desc>
-  <OffspringIsHuman>Human DNA inheritance (%)</OffspringIsHuman>
-  <OffspringIsHuman_desc>100% means born babies will be humans. Set it to 0% for random monster.</OffspringIsHuman_desc>
-  <PregnantCoeffecientForHuman>Human Pregnancy chances (%)</PregnantCoeffecientForHuman>
-  <PregnantCoeffecientForHuman_desc>Human pregnancy chances in percent.</PregnantCoeffecientForHuman_desc>
-  <PregnantCoeffecientForAnimals>Animal pregnancy chances (%)</PregnantCoeffecientForAnimals>
-  <PregnantCoeffecientForAnimals_desc>Animal pregnancy chances in percent.</PregnantCoeffecientForAnimals_desc>
-  <UseParentMethod>Babies race</UseParentMethod>
-  <UseParentMethod_desc>Born babies will have the same race as their mothers.</UseParentMethod_desc>
-  <SexFreeForAllAge>Free sex min. age</SexFreeForAllAge>
-  <SexFreeForAllAge_desc>Pawns younger than this will only have sex with pawns with 2 years age difference.</SexFreeForAllAge_desc>
-  <SexMinimumAge>Sex min. age</SexMinimumAge>
-  <SexMinimumAge_desc>Pawns younger than this will not have sex at all.</SexMinimumAge_desc>
-  <NonFutaWomenRaping_MaxVulnerability>Girls go rapin' (%)</NonFutaWomenRaping_MaxVulnerability>
-  <NonFutaWomenRaping_MaxVulnerability_desc>Only women with vulnerability higher than this will ever rape others./n Every pawns have 'vulnerability' status in their status info.</NonFutaWomenRaping_MaxVulnerability_desc>
-  <Rapee_MinVulnerability_human>'To-be raped' vulnerability (%)</Rapee_MinVulnerability_human>
-  <Rapee_MinVulnerability_human_desc>Human pawns with vulnerabilty lower than this will be raping targets./n Every pawns have 'vulnerability' status in their status info.</Rapee_MinVulnerability_human_desc>
-  <Rapee_MinVulnerability_animals>Animals' to-be-raped vulnerability (%)</Rapee_MinVulnerability_animals>
-  <Rapee_MinVulnerability_animals_desc>Animals with vulnerabilty lower than this will be raping targets for zoophiliacs./n Every pawns have 'vulnerability' status in their status info.</Rapee_MinVulnerability_animals_desc>
+	<NymphsJoin_desc>Spawns pawns with nymphomaniac trait to join the colony.</NymphsJoin_desc>
+	<STD_FromFloors>STDs from environment</STD_FromFloors>
+	<STD_FromFloors_desc>Pawns will catch STDs from dirty environment.</STD_FromFloors_desc>
+	<PrisonersBeating>Comfort prisoners beating</PrisonersBeating>
+	<PrisonersBeating_desc>Pawns will beat the hell out of comfort prisoners while raping them.</PrisonersBeating_desc>
+	<OffspringLookLikeTheirMother>Genetic inheritance (%)</OffspringLookLikeTheirMother>
+	<OffspringLookLikeTheirMother_desc>100% means born babies will look exactly like their mothers. Set it to 0% for random appearance.</OffspringLookLikeTheirMother_desc>
+	<OffspringIsHuman>Human DNA inheritance (%)</OffspringIsHuman>
+	<OffspringIsHuman_desc>100% means born babies will be humans. Set it to 0% for random monster.</OffspringIsHuman_desc>
+	<PregnantCoeffecientForHuman>Human Pregnancy chances (%)</PregnantCoeffecientForHuman>
+	<PregnantCoeffecientForHuman_desc>Human pregnancy chances in percent.</PregnantCoeffecientForHuman_desc>
+	<PregnantCoeffecientForAnimals>Animal pregnancy chances (%)</PregnantCoeffecientForAnimals>
+	<PregnantCoeffecientForAnimals_desc>Animal pregnancy chances in percent.</PregnantCoeffecientForAnimals_desc>
+	<UseParentMethod>Babies race</UseParentMethod>
+	<UseParentMethod_desc>Born babies will have the same race as their mothers.</UseParentMethod_desc>
+	<SexFreeForAllAge>Free sex min. age</SexFreeForAllAge>
+	<SexFreeForAllAge_desc>Pawns younger than this will only have sex with pawns with 2 years age difference.</SexFreeForAllAge_desc>
+	<SexMinimumAge>Sex min. age</SexMinimumAge>
+	<SexMinimumAge_desc>Pawns younger than this will not have sex at all.</SexMinimumAge_desc>
+	<NonFutaWomenRaping_MaxVulnerability>Girls go rapin' (%)</NonFutaWomenRaping_MaxVulnerability>
+	<NonFutaWomenRaping_MaxVulnerability_desc>Only women with vulnerability lower than this will ever rape others.<br/><br/>Every pawns have 'vulnerability' status in their status info.
+	</NonFutaWomenRaping_MaxVulnerability_desc>
+	<Rapee_MinVulnerability_human>'To-be raped' vulnerability (%)</Rapee_MinVulnerability_human>
+	<Rapee_MinVulnerability_human_desc>Human pawns with vulnerabilty higher than this will be raping targets.<br/><br/>Every pawns have 'vulnerability' status in their status info.
+	</Rapee_MinVulnerability_human_desc>
+	<Rapee_MinVulnerability_animals>Animals' to-be-raped vulnerability (%)</Rapee_MinVulnerability_animals>
+	<Rapee_MinVulnerability_animals_desc>Animals with vulnerabilty higher than this will be raping targets for zoophiliacs.<br/><br/>Every pawns have 'vulnerability' status in their status info.
+	</Rapee_MinVulnerability_animals_desc>
 
-  <!-- Bed -->
-  <ForWhoreUse>For Whore Use</ForWhoreUse>
-  <WhoreBedFormat>whore {0}</WhoreBedFormat>
-  <CommandBedSetAsWhoreLabel>For whores</CommandBedSetAsWhoreLabel>
-  <CommandBedSetAsWhoreDesc>Whether this bed is for whores.</CommandBedSetAsWhoreDesc>
+	<!-- Bed -->
+	<ForWhoreUse>For Whore Use</ForWhoreUse>
+	<WhoreBedFormat>whore {0}</WhoreBedFormat>
+	<CommandBedSetAsWhoreLabel>For whores</CommandBedSetAsWhoreLabel>
+	<CommandBedSetAsWhoreDesc>Whether this bed is for whores.</CommandBedSetAsWhoreDesc>
 
-  <!-- std.cs -->
-  <RJW_Opportunistic_Infection_Message>{0} has developed an infection due to the weakened immune system.</RJW_Opportunistic_Infection_Message>
-  <!--RJW_Poisoned_by_Rimming_Message>{0} has gotten food poisoning by rimming {1}</RJW_Poisoned_by_Rimming_Message-->
-  <RJW_Syphilis_Damage_Message>{0} has suffered permanent damage to {1} {2} due to an advanced {3} infection.</RJW_Syphilis_Damage_Message>
+	<!-- std.cs -->
+	<RJW_Opportunistic_Infection_Message>{0} has developed an infection due to the weakened immune system.</RJW_Opportunistic_Infection_Message>
+	<!--RJW_Poisoned_by_Rimming_Message>{0} has gotten food poisoning by rimming {1}</RJW_Poisoned_by_Rimming_Message-->
+	<RJW_Syphilis_Damage_Message>{0} has suffered permanent damage to {1} {2} due to an advanced {3} infection.</RJW_Syphilis_Damage_Message>
 
 	<!--Whore Activities-->
-  <RJW_VisitorAcceptWhore>{0} accepted the deal {1} offered.</RJW_VisitorAcceptWhore>
-  <RJW_VisitorRejectWhore>{0} rejected the deal {1} offered.</RJW_VisitorRejectWhore>
-  
-  <!-- Notifications on right-clicking CP -->
-  <PawnCantRapeCP>The target isn't healthy enough or is in a forbidden position.</PawnCantRapeCP>
-  <PawnCantRapeCP0>The pawn don't need sex, is not healthy, or cannot rape.</PawnCantRapeCP0>
-  <PawnCantRapeCP1>The pawn is not single or has his partner around.</PawnCantRapeCP1>
-  <PawnCantRapeCP2>The pawn is not zoophiliac so can't rape animals.</PawnCantRapeCP2>
-  
-  <!-- Anal Sex Notificaitons-->
-  <AnalSexSucceeded>{0} had a successful anal sex with {1}.</AnalSexSucceeded>
-  <AnalSexFailed>{0} failed to have an anal sex with {1}.</AnalSexFailed>
+	<RJW_VisitorAcceptWhore>{0} accepted the deal {1} offered.</RJW_VisitorAcceptWhore>
+	<RJW_VisitorRejectWhore>{0} rejected the deal {1} offered.</RJW_VisitorRejectWhore>
+
+	<!-- Notifications on right-clicking CP -->
+	<PawnCantRapeCP>The target isn't healthy enough or is in a forbidden position.</PawnCantRapeCP>
+	<PawnCantRapeCP0>The pawn don't need sex, is not healthy, or cannot rape.</PawnCantRapeCP0>
+	<PawnCantRapeCP1>The pawn is not single or has his partner around.</PawnCantRapeCP1>
+	<PawnCantRapeCP2>The pawn is not zoophiliac so can't rape animals.</PawnCantRapeCP2>
+
+	<!-- Anal Sex Notificaitons-->
+	<AnalSexSucceeded>{0} had a successful anal sex with {1}.</AnalSexSucceeded>
+	<AnalSexFailed>{0} failed to have an anal sex with {1}.</AnalSexFailed>
 
 </LanguageData>
